--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,9 +1,1 @@
-// This is the place to put your global variables, mixins and functions.
-// They will be automatically available in any .styl file of your app.
-
-// IMPORTANT! Updates to this file are not reactive.
-//            You have to rerun commands like `yarn start`, `yarn web`,
-//            `yarn metro` whenever you change this file.
-
-$TEST_COLOR_1 = #ff0000
-$TEST_COLOR_2 = #00ff00
+@require '../node_modules/@startupjs/ui/styles/index.styl'
