Fix landing mockup

--- a/components/Button/index.styl
+++ b/components/Button/index.styl
@@ -10,9 +10,9 @@
     text-align center
 
 .secondary
+    color white
     background-color #8cc9f0
-    & > .text
-        color #ffffff
+    border none
 
 .transparent
     border-radius 8px
