--- a/main/components/Landing/Intro/index.styl
+++ b/main/components/Landing/Intro/index.styl
@@ -22,6 +22,8 @@
     align-items center
     +tablet()
         margin-left 4u
+        width 32u
+        height 32u
     +wide()
         width 42u
         height 42u
