--- a/main/components/Landing/SecondSection/index.styl
+++ b/main/components/Landing/SecondSection/index.styl
@@ -9,6 +9,11 @@
     font-size 2u
     margin-top 4u
     line-height 3u
+
+.description
+    text-align center
+
+.content
     text-align justify
 
 .button
@@ -40,7 +45,7 @@
             border-radius 0 1u 1u 0
 
 .name
-    font-size 2.5u
+    font-size 2u
     color white
 
 .value
