--- a/main/components/Landing/FirstSection/index.styl
+++ b/main/components/Landing/FirstSection/index.styl
@@ -1,14 +1,17 @@
 .imageView
-    width 25u
-    height 25u
+    width 16u
+    height 16u
     border-radius 100%
     border solid 1px rgb(221, 221, 221)
     padding 1u
     justify-content center
     align-items center
     +tablet()
-        width 20u
-        height 20u
+        width 24u
+        height 24u
+    +wide()
+        width 28u
+        height 28u
 
 .icon
     justify-content center
@@ -43,8 +46,9 @@
 
 .list
     box-sizing border-box
+    margin-top 4u
     +tablet()
-        justify-content center
+        justify-content space-between
         align-items center
         flex-direction row
         flex-wrap wrap
