--- a/main/components/Landing/MainCard/index.styl
+++ b/main/components/Landing/MainCard/index.styl
@@ -8,9 +8,11 @@
     box-sizing border-box
     &.first
         border-top 0
-        border-radius 0.25em 0.25em 0 0
+        border-radius 1u 1u 0 0
     &.last
-        border-radius 0 0 0.25em 0.25em
+        border-radius 0 0 1u 1u
         border-bottom 0
     +tablet()
+        padding 8u
+    +wide()
         padding 12u 12u 7u 12u
