Add learnmore page

--- a/main/components/Landing/FirstSection/index.styl
+++ b/main/components/Landing/FirstSection/index.styl
@@ -22,7 +22,7 @@
     border solid 1px rgb(221, 221, 221)
 
 .title, .description, .subtitle
-    color black
+    color #636363
 
 .title
     margin-top 3u
