--- a/main/components/MainCard/index.styl
+++ b/main/components/MainCard/index.styl
@@ -7,11 +7,11 @@
     border-bottom solid 1px #dddddd
     box-sizing border-box
     &.first
-        border-top 0
-        border-radius 1u 1u 0 0
+        border-top-left-radius 1u
+        border-top-right-radius 1u
     &.last
-        border-radius 0 0 1u 1u
-        border-bottom 0
+        border-bottom-left-radius 1u
+        border-bottom-right-radius 1u
     +tablet()
         padding 8u
     +wide()
