--- a/main/pages/PLanding/index.styl
+++ b/main/pages/PLanding/index.styl
@@ -1,3 +1,20 @@
 .main
   background white
+
+.rocket
+    width 85px
+    height 85px
+
+.logoText, .description
+    color white
+
+.logoText
+    font-size 4u
+
+.description
+    color rgba(255, 255, 255, 0.65)
+    font-size 2u
+    margin-top 2u
+    line-height 3u
+    text-align center
   
