--- a/components/Button/index.styl
+++ b/components/Button/index.styl
@@ -1,6 +1,6 @@
 .root
     background-color white
-    border-radius 10px
+    border-radius 1u
     padding 0 5u
     font-size 2u
     color grey
@@ -15,7 +15,7 @@
     border none
 
 .transparent
-    border-radius 8px
+    border-radius 1u
     background-color transparent
     color white
     //box-shadow inset 0 0 0 1px rgba(255, 255, 255, 0.35)
