--- a/components/Title/index.styl
+++ b/components/Title/index.styl
@@ -11,3 +11,7 @@
     border-radius 2px
     margin 3u 0 0 0
     display block
+    +tablet()
+        margin-top 4u
+    +wide()
+        margin-top 4u
