--- a/main/components/Landing/SecondSection/index.styl
+++ b/main/components/Landing/SecondSection/index.styl
@@ -14,7 +14,7 @@
     text-align justify
 
 .button
-    margin-top 3u
+    margin-top 5u
     +tablet()
         width auto
 
@@ -44,7 +44,15 @@
 .name
     font-size 2u
     color white
+    margin-top 1u
 
 .value
     font-size 5u
+    font-weight 200
     color white
+    margin-top 1u
+
+.icon
+    +tablet()
+        height 50px
+        width 50px
