--- a/main/pages/PLearnMore/index.styl
+++ b/main/pages/PLearnMore/index.styl
@@ -30,17 +30,17 @@
 
 .contentImage
     width calc(100% + 6u)
-    height 127px
+    height 16u
     margin -5u -3u 0 -3u
     border-radius 1u 1u 0 0
     +tablet()
         margin -8u -8u 0 -8u
         width calc(100% + 16u)
-        height 359px
+        height 44u
     +wide()
         margin -12u -12u 0 -12u
         width calc(100% + 24u)
-        height 440px
+        height 56u
 
 .title
     margin-top 3u
