--- a/components/Button/index.styl
+++ b/components/Button/index.styl
@@ -2,22 +2,24 @@
     background-color white
     border-radius 1u
     padding 0 5u
-    font-size 2u
-    color grey
-    line-height 5u
     border 1px solid #DDDDDD
     width 100%
     text-align center
 
 .secondary
-    color white
+    
     background-color #8cc9f0
     border none
 
 .transparent
     border-radius 1u
     background-color transparent
-    color white
-    //box-shadow inset 0 0 0 1px rgba(255, 255, 255, 0.35)
-    & > .text
-        color #ffffff
+
+.text
+    font-size 2u
+    color grey
+    line-height 5u
+    &.secondary
+        color white
+    &.transparent
+        color white
