Update mobile view according to PR comments

--- a/components/Button/index.styl
+++ b/components/Button/index.styl
@@ -1,10 +1,11 @@
 .root
     background-color white
     border-radius 1u
-    padding 0 5u
     border 1px solid #DDDDDD
     width 100%
     text-align center
+    +tablet()
+        padding 0 5u
 
 .secondary
     
@@ -14,6 +15,10 @@
 .transparent
     border-radius 1u
     background-color transparent
+
+.icon
+    width auto
+    background-color none
 
 .text
     font-size 2u
