--- a/main/components/Footer/index.styl
+++ b/main/components/Footer/index.styl
@@ -6,7 +6,7 @@
     padding 0 2u 0 2u
     box-sizing border-box
     +tablet()
-            align-items center
+        align-items center
 
 .container
     display flex
@@ -20,7 +20,6 @@
     color white
 
 .title
-    margin-top 2u
     font-size 3u
 
 .description
@@ -64,10 +63,12 @@
 .row
     flex-direction row
     margin-top 3u
+    &.first
+        margin-top 0
 .name, .value
     color white
 .name 
-    font-weight: 800
+    font-weight: 600
     flex 0 0 12u
 
 .copyright
