--- a/main/components/Landing/SecondSection/index.styl
+++ b/main/components/Landing/SecondSection/index.styl
@@ -25,7 +25,7 @@
         flex-direction row
 
 .block
-    padding 5u
+    padding 3u 5u
     justify-content center
     align-items center
     width 100%
