--- a/main/components/Landing/FirstSection/index.styl
+++ b/main/components/Landing/FirstSection/index.styl
@@ -25,13 +25,13 @@
     color #636363
 
 .subtitle
-    margin-top 2u
+    margin-top 4u
     font-size 2.5u
 
 .description
     color #636363
     font-size 2u
-    margin-top 5u
+    margin-top 3u
     letter-spacing 0
     text-align center
 
@@ -53,8 +53,11 @@
 .listItem
     justify-content center
     align-items center
-    margin 2u
+    margin-top 5u
+    &.first
+        margin-top 0
     +tablet()
+        margin-top 0
         width: calc(50% - 5u)
     +desktop()
         width: calc(33% - 5u)
