--- a/main/pages/PLanding/index.styl
+++ b/main/pages/PLanding/index.styl
@@ -41,10 +41,11 @@
     margin-left 2u
     border none
     background transparent
+    padding 0
     &.first
         margin-left 0
     &.active
         background #fff
     +tablet()
-        padding 0 2u
+        min-width 18u
   
