Add max layout width in wide mode

--- a/main/Layout/index.styl
+++ b/main/Layout/index.styl
@@ -4,7 +4,8 @@
   width calc(100% - 4u)
   height 100%
   +wide()
-    width calc(100% - 30u)
+    max-width calc(100% - 30u)
+    width 180u
 
 .layout
   background #5f4d93
